@@ -13,6 +13,7 @@ Now
  * Add static check with ERROR in memory and world.
  * Fix IF with ERROR condition.
  * Fix bug with loading functions.
+ * Fix bug with loading individual.
 
 Version 0.0.0.6 2010-11-10
  * Fix wrong symbols in reduced output object.
